# sensei-raw-ctl

./: CMakeLists.txt  LICENSE  NOTES  README  config.h.in  org.sensei-raw-ctl.policy.in  quote-file.cmake  sensei-raw-ctl-gui.c  sensei-raw-ctl-gui.desktop.in  sensei-raw-ctl-gui.ui  sensei-raw-ctl.c
